docs: update index.html, add lightbulb.png

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         Good communication and collaboration skills.
         Acquired considerable management and communication skills.</p>
     </div>
+    <img src="images/lightbulb.png" alt="Profile picture" height="250" width="200">
   </section>
   <div class="container">
     <section>
